--- a/app/views/public/job_entries/show.html.erb
+++ b/app/views/public/job_entries/show.html.erb
@@ -19,3 +19,55 @@
     </div>
   </div>
 </div>
+<div class="job-system-wrap">
+  <div class="job-system-content">
+    <div class="job-system-title"><%= image_tag('job_entry/system-title.png', width: '290px', height: '40px') %></div>
+    <div class="job-system-text">
+      <p>他の企業にはないLBR独自の制度があります!</p>
+    </div>
+    <div class="job-system-card">
+      <p class="job-system-card-subtitle">制度1</p>
+      <div class="job-system-card-title"><%= image_tag('job_entry/system-card-title1.png', width: '180px', height: '35px') %></div>
+      <div class="job-system-card-text">
+        <p>社長とサシ飯。実際に働くとどうなるのか？どんなキャリアがあるのか？社長ってどんな人なのか？どんな会社なのか？社長のおごりで運営店舗で食事(酒あり)しながらの座談会です！</p>
+      </div>
+      <p class="job-system-card-subtitle">制度2</p>
+      <div class="job-system-card-title"><%= image_tag('job_entry/system-card-title2.png', width: '210px', height: '35px') %></div>
+      <div class="job-system-card-text">
+        <p>内定後、圧倒的なポテンシャルを見せていただいた方にのみ付与。</p>
+        <p>当社規定のタイミングでいつでも入社することができます!</p>
+        <p class="job-system-card-sub-text">※例)弊社内定後、3年以内であれば別の会社に就職していても、弊社へ再度エントリーなしで転職可能!</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="job-entry-wrap">
+  <div class="job-entry-content">
+    <div class="job-entry-title"><%= image_tag('job_entry/entry-title.png', width: '170px', height: '40px') %></div>
+    <div class="job-entry-card">
+      <div class="job-entry-card-text-box">
+        <div class="job-entry-card-text-icon">年齢</div>
+        <p class="job-entry-card-text">16~55歳</p>
+      </div>
+      <div class="job-entry-card-text-box">
+        <div class="job-entry-card-text-icon">勤務地</div>
+        <p class="job-entry-card-text">会社が指定する店舗（野田本店・香里園店）</p>
+      </div>
+      <div class="job-entry-card-text-box">
+        <div class="job-entry-card-text-icon">業務内容</div>
+        <p class="job-entry-card-text">ホール・キッチン業務全般、数値管理など焼き鳥屋の運営に関する全ての業務</p>
+      </div>
+      <div class="job-entry-card-text-box">
+        <div class="job-entry-card-text-icon">給与</div>
+        <p class="job-entry-card-text">未経験23万～ 経験者25～ 店長・マネージャー候補28～32万</p>
+      </div>
+      <div class="job-entry-card-text-box">
+        <div class="job-entry-card-text-icon">福利厚生</div>
+        <p class="job-entry-card-text">社会保険完備</p>
+      </div>
+    </div>
+    <div class="job-entry-link">
+      <%= link_to 'エントリーはこちら', new_job_entry_path, class: 'user-btn job-entry-btn' %>
+    </div>
+  </div>
+</div>
