--- a/app/views/public/shared/_header.html.erb
+++ b/app/views/public/shared/_header.html.erb
@@ -21,7 +21,7 @@
           <%= link_to "ニュース", news_index_path, class: "nav-link #{'active' if controller_name == 'news' && ['show', 'index', 'article'].include?(action_name)}" %>
         </li>
         <li class="nav-item">
-          <%= link_to "採用情報", job_entries_path , class: "nav-link #{'active' if controller_name == 'job_entries' && ['new', 'confirm', 'complette','show', 'faq'].include?(action_name)}" %>
+          <%= link_to "採用情報", job_entries_path , class: "nav-link #{'active' if controller_name == 'job_entries' && ['new', 'confirm', 'complete','show'].include?(action_name)}" %>
         </li>
         <li class="nav-item">
           <%= link_to "会社について", company_index_path, class: "nav-link  #{'active' if controller_name == 'company' && ['show'].include?(action_name)}" %>
