update/公開側のフッターのリンクを正しいものに変更

--- a/app/views/public/shared/_footer.html.erb
+++ b/app/views/public/shared/_footer.html.erb
@@ -15,7 +15,7 @@
     <div class="footer-content2">
       <div class="footer-link-box">
         <div class="footer-link1"><%= link_to "Lbrの特徴", lbr_index_path %></div>
-        <div class="footer-link2"><%= link_to "採用情報", lbr_index_path %></div>
+        <div class="footer-link2"><%= link_to "採用情報", job_entries_path %></div>
       </div>
       <div class="footer-link-box">
         <div class="footer-link1"><%= link_to "お知らせ",  news_index_path %></div>
@@ -23,7 +23,7 @@
       </div>
       <div class="footer-link-box">
         <div class="footer-link1"><%= link_to "ブログ", blog_index_path %></div>
-        <div class="footer-link2"><%= link_to "お問い合わせ", lbr_index_path %></div>
+        <div class="footer-link2"><%= link_to "お問い合わせ", new_contact_path %></div>
       </div>
     </div>
   </div>
