--- a/app/views/public/lbr/_interview.html.erb
+++ b/app/views/public/lbr/_interview.html.erb
@@ -1,44 +1,36 @@
 <div class="interview-wrap">
-  <div class="interview-title"><%= image_tag('lbr/interview-title.png', width: '340px', height: '40px') %></div>
-  <div class="interview-content-box">
-    <div class="interview-content">
-      <div class="employee-img"><%= image_tag('lbr/employee1.png') %></div>
-      <div class="employee-post">取締役</div>
-      <div class="employee-name">佐藤 保<span class="employee-name-en">KOHEI SATO</span></div>
-      <div class="employ-date">創業メンバー</div>
-      <div class="employee-text">
-        あそこに入社して成長できた<br>
-        そう思われる環境を提供したい
+  <div class="interview-content">
+    <div class="interview-title"><%= image_tag('lbr/interview-title.png', width: '340px', height: '40px') %></div>
+    <div class="interview-card-box">
+      <div class="interview-card">
+        <div class="staff-img"><%= image_tag('lbr/staff1.png') %></div>
+        <div class="staff-post">取締役</div>
+        <div class="staff-name">佐藤 保<span class="staff-name-en">KOHEI SATO</span></div>
+        <div class="employ-date">創業メンバー</div>
+        <div class="staff-text">
+          あそこに入社して成長できた<br>
+          そう思われる環境を提供したい
+        </div>
       </div>
-    </div>
-    <div class="interview-content">
-      <div class="employee-img"><%= image_tag('lbr/employee2.png') %></div>
-      <div class="employee-post">野田本店店長</div>
-      <div class="employee-name">松村 紘平<span class="employee-name-en">KOHEI MATSUMURA</span></div>
-      <div class="employ-date">2023年3月入社</div>
-      <div class="employee-text">
-        自分が成長できる<br>
-        楽しい職場をつくりたい
+      <div class="interview-card">
+        <div class="staff-img"><%= image_tag('lbr/staff2.png') %></div>
+        <div class="staff-post">野田本店店長</div>
+        <div class="staff-name">松村 紘平<span class="staff-name-en">KOHEI MATSUMURA</span></div>
+        <div class="employ-date">2023年3月入社</div>
+        <div class="staff-text">
+          自分が成長できる<br>
+          楽しい職場をつくりたい
+        </div>
       </div>
-    </div>
-    <div class="interview-content">
-      <div class="employee-img"><%= image_tag('lbr/employee2.png') %></div>
-      <div class="employee-post">野田本店店長</div>
-      <div class="employee-name">松村 紘平<span class="employee-name-en">KOHEI MATSUMURA</span></div>
-      <div class="employ-date">2023年3月入社</div>
-      <div class="employee-text">
-        自分が成長できる<br>
-        楽しい職場をつくりたい
-      </div>
-    </div>
-    <div class="interview-content">
-      <div class="employee-img"><%= image_tag('lbr/employee3.png') %></div>
-      <div class="employee-post">野田スタッフ</div>
-      <div class="employee-name">新田 剛史<span class="employee-name-en">TSUYOSHI NITTA</span></div>
-      <div class="employ-date">2022年9月入社</div>
-      <div class="employee-text">
-        お客さまが満足する<br>
-        焼き鳥を焼いていきたい
+      <div class="interview-card">
+        <div class="staff-img"><%= image_tag('lbr/staff3.png') %></div>
+        <div class="staff-post">野田スタッフ</div>
+        <div class="staff-name">新田 剛史<span class="staff-name-en">TSUYOSHI NITTA</span></div>
+        <div class="employ-date">2022年9月入社</div>
+        <div class="staff-text">
+          お客さまが満足する<br>
+          焼き鳥を焼いていきたい
+        </div>
       </div>
     </div>
   </div>
