--- a/app/views/public/job_entries/show.html.erb
+++ b/app/views/public/job_entries/show.html.erb
@@ -28,7 +28,7 @@
     <div class="job-system-card">
       <p class="job-system-card-subtitle">制度1</p>
       <div class="job-system-card-title"><%= image_tag('job_entry/system-card-title1.png', width: '180px', height: '35px') %></div>
-      <div class="job-system-card-text">
+      <div class="job-system-card-text job-system-card-text-margin">
         <p>社長とサシ飯。実際に働くとどうなるのか？どんなキャリアがあるのか？社長ってどんな人なのか？どんな会社なのか？社長のおごりで運営店舗で食事(酒あり)しながらの座談会です！</p>
       </div>
       <p class="job-system-card-subtitle">制度2</p>
