--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -1184,6 +1184,7 @@ input[name="tab_item"] {
   align-items: center;
   justify-content: center;
   margin-top: 12px;
+  margin-bottom: 10px;
 }
 
 .staff-name {
@@ -1218,6 +1219,26 @@ input[name="tab_item"] {
   line-height: 23px;
   letter-spacing: 0em;
   color: #000000;
+}
+
+.interview-section-title-wrap {
+  width: 100%;
+  height: 400px;
+  background-image: url('/assets/lbr/interview-section-img.png');
+  background-size: 100% auto;
+  display: flex;
+  align-items: center;
+}
+
+.interview-section-title-box {
+  font-size: 32px;
+  font-weight: 900;
+  margin-left: 97px;
+  color: #2C2C2C;
+}
+
+.interview-section-title-img {
+  margin-bottom: 6px;
 }
 
 
