--- a/app/views/public/lbr/staff_interview.html.erb
+++ b/app/views/public/lbr/staff_interview.html.erb
@@ -1,1 +1,10 @@
-
+<div class="interview-section-title-wrap">
+  <div class="interview-section-title-box">
+    <h1 class="interview-section-title-img"><%= image_tag('lbr/interview-title.png', width: '300px', height: '37px') %></h1>
+    <p>自分が成長できる</p>
+    <p>楽しい職場をつくりたい</p>
+    <div class="staff-post">野田本店店長</div>
+    <div class="staff-name">松村 紘平<span class="staff-name-en">KOHEI MATSUMURA</span></div>
+    <div class="employ-date">2023年3月入社</div>
+  </div>
+</div>
