--- a/app/views/public/lbr/staff_interview.html.erb
+++ b/app/views/public/lbr/staff_interview.html.erb
@@ -8,3 +8,52 @@
     <div class="employ-date">2023年3月入社</div>
   </div>
 </div>
+<div class="staff-interview-wrap">
+  <div class="staff-interview-content-box">
+    <div class="staff-interview-content1">
+      <img><%= image_tag('lbr/staff2-interview-img1.png', width: '500px', height: '400px') %><img>
+      <div class="staff-interview-content-info staff-interview-margin-left">
+        <h3 class="staff-interview-content-subtitle">Question.01</h3>
+        <h2 class="staff-interview-content-title">入社の経緯</h2>
+        <p class="staff-interview-content-text">
+          入社した経緯は前職から一緒に働いていた佐藤さんと、アルバイトスタッフに声を掛けて頂き入社いたしました。前職も同じ業態での仕事だったのと、このお店には入社する前から食べに来ており、その時からお店の活気が良く自分に合ってるのではないかと思い入社を決めました。
+        </p>
+      </div>
+    </div>
+    <div class="staff-interview-content2">
+      <h3 class="staff-interview-content-subtitle">Question.02</h3>
+      <h2 class="staff-interview-content-title">入社後苦労したこと</h2>
+      <p class="staff-interview-content-text">
+        最初はとにかく覚える事などが多く、そこが苦労しました。<br>
+        前職と同じ形態での仕事だったので、<br>
+        いけるかなと思っていましたがつまづく事も多かったです。<br>
+        沢山迷惑もかけましたが<br>
+        バイトスタッフ、上司、社長に支えられ、<br>
+        最終はやはり自分自身の力、<br>
+        気持ちで少しずつ困難の壁を超えてきた気がします。
+      </p>
+    </div>
+    <div class="staff-interview-content3">
+      <div class="staff-interview-content-info staff-interview-margin-right">
+        <h3 class="staff-interview-content-subtitle">Question.03</h3>
+        <h2 class="staff-interview-content-title">今後の目標について</h2>
+        <p class="staff-interview-content-text">
+          やっぱりこの仕事をしてる限り、自分でやる事を目標にして入社したのでそこを目標に頑張ってます！<br>
+          今後も覚える事など色々見つけて一つ一つ目の前の壁をクリアしていきたいと思います！<br>
+          目標を目標で終わらせない力も身につけて日々精進の気持ちを忘れず頑張ります！
+        </p>
+      </div>
+      <img><%= image_tag('lbr/staff2-interview-img2.png', width: '500px', height: '400px') %><img>
+    </div>
+    <div class="staff-interview-content4 text-center">
+      <h3 class="staff-interview-content-subtitle">Question.04</h3>
+      <h2 class="staff-interview-content-title">将来入ってくるメンバーに一言</h2>
+      <p class="staff-interview-content-text">
+        一番は自分が働いてて楽しい<br>
+        成長が感じられる会社を一緒に作って行けたらいいなと思います！<br>
+        一緒に働いて一緒に笑って日々切磋琢磨していける仲間を増やして<br>
+        活気のある会社を作っていきましょう！
+      </p>
+    </div>
+  </div>
+</div>
