--- a/app/views/public/shared/_header.html.erb
+++ b/app/views/public/shared/_header.html.erb
@@ -12,7 +12,7 @@
     <div class="header-linklist collapse navbar-collapse active" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <%= link_to "Lbrの特徴", lbr_index_path, class: "nav-link #{'active' if controller_name == 'lbr' && ['company'].include?(action_name)}" %>
+          <%= link_to "Lbrの特徴", lbr_index_path, class: "nav-link #{'active' if controller_name == 'lbr' && ['show'].include?(action_name)}" %>
         </li>
         <li class="nav-item">
           <%= link_to "求職者のみなさまへ", message_lbr_index_path, class: "nav-link #{'active' if controller_name == 'lbr' && ['message', 'staff_interview'].include?(action_name)}" %>
