update/swiperjsを利用して公開側のLBrについて画面の画像自動スクロール画面を作成

--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -1168,7 +1168,6 @@ input[name="tab_item"] {
   color:  #2C2C2C;
 }
 
-
 .lbr-merit-content-title {
   font-size: 36px;
   font-weight: 700;
@@ -1185,6 +1184,16 @@ input[name="tab_item"] {
 .lbr-merit-notion-text {
   font-size: 18px;
   font-weight: 900;
+}
+
+.lbr-img-wrap {
+  width: 100%;
+  background-color: #FFFFFF;
+  padding: 30px 0;
+}
+
+.swiper2 {
+  padding: 10px 30px 0;
 }
 
 .owner-message-wrap {
