--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -4,6 +4,8 @@
     <title>LbrestaurantWebsite</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <script src="https://kit.fontawesome.com/50cd9f29f3.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+    
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
