update/公開側のLbrについて画面のデザインを完成

--- a/app/views/public/lbr/show.html.erb
+++ b/app/views/public/lbr/show.html.erb
@@ -90,7 +90,9 @@
       <div class="swiper-slide"><%= image_tag('lbr/staff2-interview-img1.png', width: '420', height: '250px') %></div>
     </div>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+</div>
+<%= render 'public/shared/carrer-contents' %>
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script>
     const mySwiper1 = new Swiper('.swiper1', {
       loop: true,
@@ -118,4 +120,3 @@
       },
     });
   </script>
-</div>
